--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 </head>
 
 <body>
-  <header>
-    
+
+  <header class="white">
+    <img src="Logo.png" alt="">
+    <h1>Toboolist</h1>
   </header>
 
-  <main>
+  <main class="white">
 
+    
   </main>
 </body>
 </html>
