--- a/index.html
+++ b/index.html
@@ -11,12 +11,26 @@
 <body>
 
   <header class="white">
-    <img src="Logo.png" alt="">
+    
+    <section id="title">
+      <img src="Logo.png" alt="">
     <h1>Toboolist</h1>
+    </section>
+
+    <section class="main-page white" id="commands">
+      <button id="task">Add Task</button>
+      <button class="white" id="section">Add Section</button>
+     </section>
   </header>
 
-  <main class="white">
+  <main class="white main-page">
 
+    <div>
+      <h2>New Task</h2>
+      <div>
+        <span>Quarterly Newsletter</span>
+      </div>
+    </div>
     
   </main>
 </body>
