--- a/index.html
+++ b/index.html
@@ -17,20 +17,56 @@
     <h1>Toboolist</h1>
     </section>
 
-    <section class="main-page white" id="commands">
-      <button id="task">Add Task</button>
-      <button class="white" id="section">Add Section</button>
-     </section>
+    
   </header>
+
+  <section id="commands" class="white main-page">
+    <button id="add-task">Add Task</button>
+    <button class="white" id="add-section">Add Section</button>
+  </section>
 
   <main class="white main-page">
 
-    <div>
-      <h2>New Task</h2>
-      <div>
-        <span>Quarterly Newsletter</span>
+    <div class="task">
+      <h2> New Task</h2>
+      <div class="list-item">
+        <span class="readen">&#10003;</span><span class="list-name">Quarterly Newsletter</span><span class="editorial notes"> Editorial</span>
       </div>
     </div>
+
+    <div class="task">
+      <h2> Today</h2>
+      <div class="list-item">
+        <span class="readen">&#10003;</span><span class="list-name">Quarterly Newsletter</span><span class="editorial notes"> Editorial</span>
+      </div>
+      <div class="list-item">
+        <span class="readen">&#10003;</span><span class="list-name">Quarterly Newsletter</span><span class="Q1-Goals notes"> Q1 Goals</span>
+      </div>
+      <div class="list-item">
+        <span class="unreaden">&#10003;</span><span class="list-name">Quarterly Newsletter</span><span class="Recruiting notes"> Recruiting</span>
+      </div>
+      <div class="list-item">
+        <span class="readen">&#10003;</span><span class="list-name">Quarterly Newsletter</span><span class="Mobile notes"> Mobile</span>
+      </div>
+    </div>
+
+    <div class="task">
+      <h2> Upcoming</h2>
+      <div class="list-item">
+        <span class="unreaden">&#10003;</span><span class="list-name">Quarterly Newsletter</span>
+      </div>
+      <div class="list-item">
+        <span class="readen">&#10003;</span><span class="list-name">Quarterly Newsletter</span><span class="Website notes"> Website</span>
+      </div>
+      <div class="list-item">
+        <span class="readen">&#10003;</span><span class="list-name">Quarterly Newsletter</span><span class="Sales notes"> Sales</span>
+      </div>
+      <div class="list-item">
+        <span class="readen">&#10003;</span><span class="list-name">Quarterly Newsletter</span><span class="editorial notes"> Editorial</span>
+      </div>
+    </div>
+
+
     
   </main>
 </body>
